# clODE

./: .gitignore  Makefile  README.md  WORKSPACE  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  shell.nix
bazel/: get_python_libs.py  python.bzl  repositories.bzl  repository_locations.bzl
clode/: BUILD  __init__.py  features.py  function_converter.py  opencl_builtins.py  opencl_functions.py  runtime.py  solver.py  trajectory.py  xpp_parser.py
clode.egg-info/: PKG-INFO  SOURCES.txt
docs/: Euler_Maruyana.md  Ornstein-Uhlenbeck_process.md  README.md  api_reference.md  fast_and_slow_variables.md  feature_extraction.md  getting_started.md  init_runtime.md  install.md  matlab.md  pycon.py  specifying_odes.md  spike_counting.md  trajectory_simulation.md
example/: BUILD  main_file.cpp
examples/: dump_device_performance.py  fast_and_slow.py  observe_sine_curve.py  phase_response_curve.py  spike_counting.py  visualize_events.py  visualize_events_localmax.py  visualize_events_nhood2.py  visualize_events_threshold2.py
matlab/: GridSimulation.m  InitialValueProblem.m  clODE.m  clODEfeatures.m  clODEfeaturesmex.cpp  clODEfeaturesmex.mexmaci64  clODEfeaturesmex.mexw64  clODEmex.cpp  clODEmex.mexmaci64  clODEmex.mexw64  clODEmexHelpers.hpp  clODEtrajectory.m  clODEtrajectorymex.cpp  clODEtrajectorymex.mexmaci64  clODEtrajectorymex.mexw64  clickTrajectory.m  compileCLODEmex.m  featureFig.m  gridKeyPress.m  gridtool.m  lactotroph.cl  lactotroph.ode  mexUtil.hpp  plot_twopar.m  queryOpenCL.cpp  queryOpenCL.mexmaci64  testCLODE.m  testCLODEfeatures.m
paper/: paper.bib  (+1 more)
(+175 files in other folders)
